--- a/base/templates/base/assortment.html
+++ b/base/templates/base/assortment.html
@@ -48,66 +48,68 @@
 
     <div class="abs">
         {% for el in products %}
-            {% if flag == 'true' or category == el.category or category == "Все товары"%}
-                <div class="assortment">
-                    <img src="/media/{{el.image}}" onclick="openImage('/media/{{el.image}}')">
+            {% if flag == 'true' or category == el.category or category == "Все товары" %}
+                {% if el.quantity > 0 %}
+                    <div class="assortment">
+                        <img src="/media/{{el.image}}" onclick="openImage('/media/{{el.image}}')">
 
-<!--                     <dialog id="dialog-{{ el.id }}" class="dialog_menu">-->
-<!--                            <h2>{{ el.title }}</h2>-->
-<!--                            <p>{{ el.additional_info }}</p><br><br>-->
-<!--                            <button onclick="closeDialog('{{ el.id }}')">X</button>-->
-<!--                     </dialog>-->
-                    <dialog id="dialog-{{ el.id }}" class="dialog_menu">
-                         <h2>{{ el.title }}</h2>
-                        <p>Описание выбранного вами товара:</p>
-                         <p>{{ el.additional_info }}</p>
-                        <p></p>
-                        <button onclick="closeDialog('{{ el.id }}')" aria-label="close" class="x">❌</button>
-                    </dialog>
+    <!--                     <dialog id="dialog-{{ el.id }}" class="dialog_menu">-->
+    <!--                            <h2>{{ el.title }}</h2>-->
+    <!--                            <p>{{ el.additional_info }}</p><br><br>-->
+    <!--                            <button onclick="closeDialog('{{ el.id }}')">X</button>-->
+    <!--                     </dialog>-->
+                        <dialog id="dialog-{{ el.id }}" class="dialog_menu">
+                             <h2>{{ el.title }}</h2>
+                            <p>Описание выбранного вами товара:</p>
+                             <p>{{ el.additional_info }}</p>
+                            <p></p>
+                            <button onclick="closeDialog('{{ el.id }}')" aria-label="close" class="x">❌</button>
+                        </dialog>
 
-                        <div class="text_block">
-                            <div class="button_asort" style="">
-                                <button class="btn btn-info" id="info" onclick="openDialog('{{ el.id }}')">
-                                    <span class="text_about1">Описание</span>
-                                    <span class="text_about2"><img src="/media/svg_ico/card-text.svg"></span>
-                                </button>
-
-                                {% if not request.user.is_authenticated %}
-                                    <a href="{% url 'register' %}"><button class="btn btn-success">
-                                        <span class="text_in1">В корзину</span>
-                                        <span class="text_in2"><img src="/media/svg_ico/cart-plus.svg"></span>
-                                    </button></a>
-
-                                {% elif el.id not in products_itog %}
-        <!--                            <a href="{% url 'add_to_cart' %}?id={{el.id}}"><button class="btn btn-warning">В корзину</button></a>-->
-                                    <button id="add-to-cart-{{ el.id }}" class="btn btn-success" onclick="addToCart('{{ el.id }}')">
-                                        <span class="text_in1" id="2span_add-to-cart-{{ el.id }}">В корзину</span>
-                                        <span class="text_in2" id="span_add-to-cart-{{ el.id }}"><img src="/media/svg_ico/cart-plus.svg"></span>
+                            <div class="text_block">
+                                <div class="button_asort" style="">
+                                    <button class="btn btn-info" id="info" onclick="openDialog('{{ el.id }}')">
+                                        <span class="text_about1">Описание</span>
+                                        <span class="text_about2"><img src="/media/svg_ico/card-text.svg"></span>
                                     </button>
-                                {% else %}
-        <!--                            <a href="{% url 'delete_to_cart' %}?id={{el.id}}"><button class="btn btn-warning">Убрать из корзины</button></a>-->
-                                    <button id="delete-to-cart-{{ el.id }}" class="btn btn-danger" name="{{ el.id }}" onclick="removeFromCart('{{ el.id }}')">
-                                        <span class="text_out1" id="2span_delete-to-cart-{{ el.id }}">Из корзины</span>
-                                        <span class="text_out2" id="span_delete-to-cart-{{ el.id }}"><img src="/media/svg_ico/cart-dash.svg"></span>
-                                    </button>
-                                {% endif %}
 
-                                <div class="quantity_product_a" data-id="{{ el.id }}" id="product-card" quantity="{{ el.quantity }}">
-                                      <button class="increase-btn"><i class="bi bi-plus-lg"></i></button>
-                                      <input id='input_{{ el.id }}' type="number" class="counter-input" value="{{ el.quantity_basket }}" min="1" max="100" data-product-id="{{ el.id }}">
-                                      <button class="decrease-btn"><i class="bi bi-dash-lg"></i></button>
+                                    {% if not request.user.is_authenticated %}
+                                        <a href="{% url 'register' %}"><button class="btn btn-success">
+                                            <span class="text_in1">В корзину</span>
+                                            <span class="text_in2"><img src="/media/svg_ico/cart-plus.svg"></span>
+                                        </button></a>
+
+                                    {% elif el.id not in products_itog %}
+            <!--                            <a href="{% url 'add_to_cart' %}?id={{el.id}}"><button class="btn btn-warning">В корзину</button></a>-->
+                                        <button id="add-to-cart-{{ el.id }}" class="btn btn-success" onclick="addToCart('{{ el.id }}')">
+                                            <span class="text_in1" id="2span_add-to-cart-{{ el.id }}">В корзину</span>
+                                            <span class="text_in2" id="span_add-to-cart-{{ el.id }}"><img src="/media/svg_ico/cart-plus.svg"></span>
+                                        </button>
+                                    {% else %}
+            <!--                            <a href="{% url 'delete_to_cart' %}?id={{el.id}}"><button class="btn btn-warning">Убрать из корзины</button></a>-->
+                                        <button id="delete-to-cart-{{ el.id }}" class="btn btn-danger" name="{{ el.id }}" onclick="removeFromCart('{{ el.id }}')">
+                                            <span class="text_out1" id="2span_delete-to-cart-{{ el.id }}">Из корзины</span>
+                                            <span class="text_out2" id="span_delete-to-cart-{{ el.id }}"><img src="/media/svg_ico/cart-dash.svg"></span>
+                                        </button>
+                                    {% endif %}
+
+                                    <div class="quantity_product_a" data-id="{{ el.id }}" id="product-card" quantity="{{ el.quantity }}">
+                                          <button class="increase-btn"><i class="bi bi-plus-lg"></i></button>
+                                          <input id='input_{{ el.id }}' type="number" class="counter-input" value="{{ el.quantity_basket }}" min="1" max="100" data-product-id="{{ el.id }}">
+                                          <button class="decrease-btn"><i class="bi bi-dash-lg"></i></button>
+                                    </div>
+
                                 </div>
 
-                            </div>
-
-                            <h3 class='title_desktop' style="margin-top: -100px;">{{ el.title }}</h3><br>
-                            <h4 class='price_mobile'>{{ el.price }}</h4>
-                            <h3 class='title_mobile'>{{ el.title }}</h3>
-                            <h4 class="price">Цена: {{ el.price }}</h4>
-                            <h5 class="nail_desktop">В наличии: {{ el.quantity }}</h5>
-                            <h5 class="nail_mobile">В наличии: {{ el.quantity }}</h5>
+                                <h3 class='title_desktop' style="margin-top: -100px;">{{ el.title }}</h3><br>
+                                <h4 class='price_mobile'>{{ el.price }}</h4>
+                                <h3 class='title_mobile'>{{ el.title }}</h3>
+                                <h4 class="price">Цена: {{ el.price }}</h4>
+                                <h5 class="nail_desktop">В наличии: {{ el.quantity }}</h5>
+                                <h5 class="nail_mobile">В наличии: {{ el.quantity }}</h5>
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             {% endif %}
 	    {% endfor %}
 <!--        <div class="assortment"></div>-->
