--- a/news/static/news/css/news.css
+++ b/news/static/news/css/news.css
@@ -124,10 +124,18 @@
 /*  margin-bottom: 100px;*/
 /*}*/
 
+@media (max-width: 1200px) {
+  #content-main {
+    margin-top: 230px;
+  }
+}
+
 /* Медиа-запрос для экранов шириной меньше 600px */
 @media (max-width: 599px) {
   #content-main {
     padding: 10px;
+    margin-top: 150px;
+    margin-bottom: 100px;
   }
 
   .form-title,
@@ -150,5 +158,14 @@
   .form-category label,
   .field-quantity label {
     margin-bottom: 3px;
+  }
+}
+
+@media (max-width: 400px) {
+ #content-main {
+    padding: 10px;
+    margin-top: 150px;
+    margin-bottom: 100px;
+    font-size: 12px;
   }
 }
