--- a/users/static/users/css/register.css
+++ b/users/static/users/css/register.css
@@ -1,53 +1,6 @@
-/*.register_div {*/
-/*    !*background: radial-gradient(circle, rgba(231,231,231,1) 0%, rgba(23,24,65,0.76234243697479) 100%);*!*/
-/*    margin:15% 0% 0 15%;*/
-/*    !*margin-left: ;*!*/
-/*}*/
-
-/*.register_div .btn-warning {*/
-/*    margin-left: 200px;*/
-/*    font-size: 40px;*/
-/*}*/
-
 .register_div h1, .registr{
     display: inline-block;
 }
-
-/*.register li {*/
-/*    font-family: Comic Sans MS, Comic Sans, cursive;*/
-/*	font-weight: bold;*/
-/*    color: #FFFF00;*/
-/*    list-style: none;*/
-/*}*/
-
-/*.registr{*/
-/*    font-family: Comic Sans MS, Comic Sans, cursive;*/
-/*	font-weight: bold;*/
-/*    color: #00D4C6;*/
-/*    transition: transform .6s ease;*/
-/*}*/
-
-/*.registr:hover {*/
-/*    transform: scale(1.05);*/
-/*}*/
-
-/*.login {*/
-/*    font-family: Comic Sans MS, Comic Sans, cursive;*/
-/*	font-weight: bold;*/
-/*    color: #00D4C6;*/
-/*    transition: transform .6s ease;*/
-/*}*/
-
-/*.login:hover{*/
-/*    transform: scale(1.05);*/
-/*}*/
-
-/*.register_div label  {*/
-/*    font-size: 50px;*/
-/*    font-family: Comic Sans MS, Comic Sans, cursive;*/
-/*	font-weight: bold;*/
-/*    color: #00D4C6;*/
-/*}*/
 
 .register_div h1 {
     font-size: 30px;
@@ -62,285 +15,6 @@
 	font-weight: bold;
 }
 
-/*.form-input{*/
-/*    width: 300px;*/
-/*  font-size: 13px;*/
-/*  padding: 6px 0 4px 10px;*/
-/*  border: 1px solid #cecece;*/
-/*  background: #F6F6f6;*/
-/*  border-radius: 8px;*/
-/*}*/
-
-
-
-/*------------------------------*/
-/*.register_div {*/
-/*  !*background: radial-gradient(circle, rgba(231,231,231,1) 0%, rgba(23,24,65,0.76234243697479) 100%);*!*/
-/*  margin: 15% 0% 0 15%;*/
-/*  !*margin-left: ;*!*/
-/*}*/
-
-/*.register_div .btn-warning {*/
-/*  margin-left: 200px;*/
-/*  font-size: 40px;*/
-/*}*/
-
-/*.register_div h1, .login, .registr {*/
-/*  display: inline-block;*/
-/*}*/
-
-/*.register li {*/
-/*  font-family: Comic Sans MS, Comic Sans, cursive;*/
-/*  font-weight: bold;*/
-/*  color: #FFFF00;*/
-/*  list-style: none;*/
-/*}*/
-
-/*.registr {*/
-/*  font-family: Comic Sans MS, Comic Sans, cursive;*/
-/*  font-weight: bold;*/
-/*  color: #00D4C6;*/
-/*  transition: transform .6s ease;*/
-/*}*/
-
-/*.registr:hover {*/
-/*  transform: scale(1.05);*/
-/*}*/
-
-/*.login {*/
-/*  font-family: Comic Sans MS, Comic Sans, cursive;*/
-/*  font-weight: bold;*/
-/*  color: #00D4C6;*/
-/*  transition: transform .6s ease;*/
-/*}*/
-
-/*.login:hover {*/
-/*  transform: scale(1.05);*/
-/*}*/
-
-/*.register_div label {*/
-/*  font-size: 50px;*/
-/*  font-family: Comic Sans MS, Comic Sans, cursive;*/
-/*  font-weight: bold;*/
-/*  color: #00D4C6;*/
-/*}*/
-
-/*.register_div h1 {*/
-/*  font-size: 70px;*/
-/*  font-family: Comic Sans MS, Comic Sans, cursive;*/
-/*  font-weight: bold;*/
-/*  color: #00D4C6;*/
-/*}*/
-
-/*.form-input {*/
-/*  width: 300px;*/
-/*  font-size: 13px;*/
-/*  padding: 6px 0 4px 10px;*/
-/*  border: 1px solid #cecece;*/
-/*  background: #F6F6f6;*/
-/*  border-radius: 8px;*/
-/*}*/
-
-/*@media (max-width: 600px) {*/
-/*  .register_div {*/
-/*    margin-top: 200px;*/
-/*  }*/
-
-/*  .register_div .btn-warning {*/
-/*    margin-left: 15%;*/
-/*    font-size: 5vw;*/
-/*    width: 80%;*/
-/*    max-width: 220px;*/
-/*    max-height: 100px;*/
-/*  }*/
-
-/*  .register_div label {*/
-/*    font-size: 30px;*/
-/*  }*/
-
-/*  .register_div h1 {*/
-/*    font-size: 50px;*/
-/*  }*/
-/*}*/
-
-/*@media (min-width: 601px) and (max-width: 1200px) {*/
-/*  .register_div {*/
-/*    margin-top: 200px;*/
-/*  }*/
-
-/*  .register_div label {*/
-/*    font-size: 40px;*/
-/*  }*/
-
-/*  .register_div h1 {*/
-/*    font-size: 60px;*/
-/*  }*/
-/*}*/
-
-/*@media only screen and (max-width: 385px){*/
-/*  .register_div {*/
-/*    margin-left: 10px;*/
-/*  }*/
-/*  .register_div h1{*/
-/*    font-size: 40px;*/
-/*  }*/
-/*}*/
-/*---------------------------*/
-
-
-
-
-
-
-
-
-/*@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');*/
-/***/
-/*{*/
-/*  margin: 0;*/
-/*  padding: 0;*/
-/*  box-sizing: border-box;*/
-/*  font-family: 'Quicksand', sans-serif;*/
-/*}*/
-
-/*section {*/
-/*  position: absolute;*/
-/*  width: 100vw;*/
-/*  height: 100vh;*/
-/*  display: flex;*/
-/*  justify-content: center;*/
-/*  align-items: center;*/
-/*  gap: 2px;*/
-/*  flex-wrap: wrap;*/
-/*  overflow: hidden;*/
-/*}*/
-/*@keyframes animate {*/
-/*  0% {*/
-/*    transform: translateY(-100%);*/
-/*  }*/
-/*  100% {*/
-/*    transform: translateY(100%);*/
-/*  }*/
-/*}*/
-
-/*section .signin {*/
-/*  width: 400px;*/
-/*  background: #222;*/
-/*  z-index: 1000;*/
-/*  display: flex;*/
-/*  justify-content: center;*/
-/*  align-items: center;*/
-/*  padding: 40px;*/
-/*  border-radius: 4px;*/
-/*  box-shadow: 0 15px 35px rgba(0,0,0,9);*/
-/*}*/
-/*section .signin .content*/
-/*{*/
-/*  position: relative;*/
-/*  width: 100%;*/
-/*  display: flex;*/
-/*  justify-content: center;*/
-/*  align-items: center;*/
-/*  flex-direction: column;*/
-/*  gap: 40px;*/
-/*}*/
-/*section .signin .content h2*/
-/*{*/
-/*  font-size: 2em;*/
-/*  color: #0f0;*/
-/*  text-transform: uppercase;*/
-/*}*/
-/*section .signin .content .form*/
-/*{*/
-/*  width: 100%;*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*  gap: 25px;*/
-/*}*/
-/*section .signin .content .form .inputBox*/
-/*{*/
-/*  position: relative;*/
-/*  width: 100%;*/
-/*}*/
-/*section .signin .content .form .inputBox input*/
-/*{*/
-/*  position: relative;*/
-/*  width: 100%;*/
-/*  background: #333;*/
-/*  border: none;*/
-/*  outline: none;*/
-/*  padding: 25px 10px 7.5px;*/
-/*  border-radius: 4px;*/
-/*  color: #fff;*/
-/*  font-weight: 500;*/
-/*  font-size: 1em;*/
-/*}*/
-/*section .signin .content .form .inputBox i*/
-/*{*/
-/*  position: absolute;*/
-/*  left: 0;*/
-/*  padding: 15px 10px;*/
-/*  font-style: normal;*/
-/*  color: #aaa;*/
-/*  transition: 0.5s;*/
-/*  pointer-events: none;*/
-/*}*/
-/*.signin .content .form .inputBox input:focus ~ i,*/
-/*.signin .content .form .inputBox input:valid ~ i*/
-/*{*/
-/*  transform: translateY(-7.5px);*/
-/*  font-size: 0.8em;*/
-/*  color: #fff;*/
-/*}*/
-/*.signin .content .form .links*/
-/*{*/
-/*  position: relative;*/
-/*  width: 100%;*/
-/*  display: flex;*/
-/*  justify-content: space-between;*/
-/*}*/
-/*.signin .content .form .links a*/
-/*{*/
-/*  color: #fff;*/
-/*  text-decoration: none;*/
-/*}*/
-/*.signin .content .form .links a:nth-child(2)*/
-/*{*/
-/*  color: #0f0;*/
-/*  font-weight: 600;*/
-/*}*/
-/*.signin .content .form .inputBox input[type="submit"]*/
-/*{*/
-/*  padding: 10px;*/
-/*  background: #0f0;*/
-/*  color: #000;*/
-/*  font-weight: 600;*/
-/*  font-size: 1.35em;*/
-/*  letter-spacing: 0.05em;*/
-/*  cursor: pointer;*/
-/*}*/
-/*input[type="submit"]:active*/
-/*{*/
-/*  opacity: 0.6;*/
-/*}*/
-/*@media (max-width: 900px)*/
-/*{*/
-/*  section span*/
-/*  {*/
-/*    width: calc(10vw - 2px);*/
-/*    height: calc(10vw - 2px);*/
-/*  }*/
-/*}*/
-/*@media (max-width: 600px)*/
-/*{*/
-/*  section span*/
-/*  {*/
-/*    width: calc(20vw - 2px);*/
-/*    height: calc(20vw - 2px);*/
-/*  }*/
-/*}*/
-
-
 /* Стилизация формы */
 form {
   max-width: 480px;
@@ -352,15 +26,10 @@ form {
   border-radius: 4px;
 }
 
-/*.login{*/
-/*  text-align: center;*/
-/*}*/
-
-
 /* Стилизация заголовка формы */
 form h2 {
   text-align: center;
-  margin-top: 0;
+  margin-top: 10px;
 }
 
 /* Стилизация полей формы */
@@ -410,11 +79,17 @@ form button[type="submit"]:hover {
 
 @media only screen and (max-width: 500px) {
   form {
-    margin-top: 150px;
+    margin-top: 100px;
     margin-bottom: 100px;
   }
-  /*.login {*/
-  /*  margin-top: 250px;*/
-  /*}*/
+
+  .register_div {
+    font-size: 15px;
+  }
+
+  .register p {
+    margin-bottom: 0;
+  }
+
 
 }
